--- a/starter/02-HTML-Fundamentals/Index.html
+++ b/starter/02-HTML-Fundamentals/Index.html
@@ -14,12 +14,26 @@
     <h5>The Basic Language of the Web: HTML</h5>
     <h6>The Basic Language of the Web: HTML</h6>
     -->
-    <h1>📘 The Code Magazine</h1>
 
+    <header>
+    <h1>📘 The Code Magazine </h1>
+
+
+    <nav>
+     <a href="blog.html">Blog</a>
+     <a href="#">Challenge </a>
+     <a href="#">Flexbox </a> 
+     <a href="#">Css Grid8 </a>
+    </nav>
+
+    </header>
+    <header>
+   
+    <article>
     <h2>The Basic Language of the Web: HTML</h2>
 
     <img 
-     src="laura-jones.jpg" 
+     src="img/laura-jones.jpg" 
      alt="Headshot of Laura Jones"
      height="50" 
      width="50"
@@ -28,10 +42,12 @@
     <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
 
      <img 
-      src="post-img.jpg"
+      src="img/post-img.jpg"
       alt= "HTML code on screen" 
-      width="500" 
+      width="500"       
       hight="200"/>
+
+    </header>
 
     <p>
       All modern websites and web applications are built using three
@@ -46,8 +62,8 @@
     </p>
     <h3>What is HTML?</h3>
     <p>
-      HTML stands for <strong>H</strong>yper <strong>T</strong>ext
-      <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup language
+      HTML stands for<strong> H</strong>yper<strong>T</strong>ext
+      <strong> M</strong>arkup<strong> L</strong>anguage. It's a markup language
       that web developers use to structure and describe the content of a webpage
       (not a programming language).
     </p>
@@ -65,7 +81,7 @@
       <li>The actual element</li>
     </ol>
 
-    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN Web Doc</a>
+    <p>You can learn more at <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"target="-blank">MDN Web Docs</a></p>
 
     <h3>Why should you learn HTML?</h3>
 
@@ -88,6 +104,46 @@
         
       </ul>
     </p>
-    <p>Hopefully you learnedsomething new here. See you next time!</p>
+    <p>Hopefully you learned something new here. See you next time!</p>
+
+  </article>
+ 
+  <aside>
+    <h4>Related posts</h4>
+    <ul>
+      <li>
+        <img src="img/related-1.jpg"
+             alt="person programming"
+            width="75"
+            height="75"/>
+            <a href="#"> How to Learn Web Development</a>
+            <p>By Jonas Schmedtmann</p>
+      </li>
+      <li>
+        <img src="img/related-2.jpg"
+        alt="person programming"
+       width="75"
+       height="75"/>
+       <a href="#">The Unknown Powers of CSS</a>
+       <p>By Jim Dillon</p>
+
+      </li>
+      <li>
+        <img src="img/related-3.jpg"
+        alt="person programming"
+       width="75"
+       height="75"/>
+       <a href="#"> Why JavaScript is Awesome</a>
+       <p>By Matilda</p>
+
+      </li>
+    </ul>
+  </aside>
+  
+  <footer>
+    Copyright &copy; 2027 by The Code 
+    Magazine </footer>
+  
+
   </body>
 </html>
