--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href="style.CSS" rel="stylesheet" />
+
     <title>The Basic Language of the Web: HTML</title>
+      
   </head>
 
   <body>
@@ -15,8 +18,8 @@
     <h6>The Basic Language of the Web: HTML</h6>
     -->
 
-    <header>
-      <h1>📘 The Code Magazine</h1>
+    <header class="Main-header">
+      <h1>📘 THE Monisharan MAGAZINE</h1>
 
       <nav>
         <a href="blog.html">Blog</a>
@@ -24,10 +27,11 @@
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
       </nav>
+
     </header>
 
     <article>
-      <header>
+      <headerhfrf>
         <h2>The Basic Language of the Web: HTML</h2>
 
         <img
@@ -37,7 +41,7 @@
           width="50"
         />
 
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
 
         <img
           src="img/post-img.jpg"
@@ -45,7 +49,7 @@
           width="500"
           height="200"
         />
-      </header>
+      </headerhfrf>
 
       <p>
         All modern websites and web applications are built using three
@@ -74,7 +78,7 @@
       <p>In HTML, each element is made up of 3 parts:</p>
 
       <ol>
-        <li>The opening tag</li>
+        <li class="First-li">The opening tag</li>
         <li>The closing tag</li>
         <li>The actual element</li>
       </ol>
@@ -96,13 +100,15 @@
       </p>
 
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
-        <li>
-          To hand-craft beautiful websites instead of relying on tools like
-          Worpress or Wix
-        </li>
+        <li class="First-li">To be able to use the fundamental web dev language</li>
+
+        <li>To hand-craft beautiful websites instead of relying on tools like
+          Worpress or Wix</li>
+
         <li>To build web applications</li>
+
         <li>To impress friends</li>
+
         <li>To have fun 😃</li>
       </ul>
 
@@ -112,7 +118,7 @@
     <aside>
       <h4>Related posts</h4>
 
-      <ul>
+      <ul class="related">
         <li>
           <img
             src="img/related-1.jpg"
@@ -121,13 +127,13 @@
             width="75"
           />
           <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author" >By Jonas Schmedtmann</p> 
         </li>
         <li>
           <img src="img/related-2.jpg" alt="Lightning" width="75" heigth="75" />
           <a href="#">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
-        </li>
+          <p class="related-author" >By Jim Dillon</p>
+        </li> 
         <li>
           <img
             src="img/related-3.jpg"
@@ -136,11 +142,16 @@
             height="75"
           />
           <a href="#">Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author" >By Matilda</p>
         </li>
       </ul>
     </aside>
 
-    <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
+    <footer>
+       <p id="copyright">
+         Copyright &copy; 2027 by The Code Magazine.
+       </p> 
+    </footer>
   </body>
 </html>
+
